Overflow fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4515,15 +4515,10 @@ float:right;
 }
 
 
-.projectimagesA {
-
-	width:90%;
-
-}
 
 .projectimages {
-	margin-left: 7%;
-	margin-right: 7%;
+	margin-left: 4.5%;
+	margin-right: 4.5%;
 	width: 90%;
 	height:auto;
 
